# satteri-mermaid

./: .gitattributes  .gitignore  .npmignore  Cargo.toml  README.md  README_CN.md  index.cjs  index.d.ts  oxlintrc.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: check.yml  release.yml
example/: astro.config.mjs  index.html  package.json
example/src/: content.config.ts
example/src/content/posts/: 01-architecture-overview.md  02-flowchart-gallery.md  03-sequence-diagram.md  04-class-er-diagrams.md  05-state-gantt-pie.md  06-gitgraph-mindmap-timeline.md  flowchart.md
example/src/layouts/: BlogPost.astro  Layout.astro
example/src/pages/: index.astro  index.md
example/src/pages/posts/: [...slug].astro
example/src/styles/: global.css
src/: index.ts  lib.rs  plugin.ts  renderer.ts
test/: plugin.test.ts  renderer.test.ts
